  performance. Closes Debian bug 968918 (Threshold function is extremely slow)
* + missing crop icon
* + View/Edit OCR toggle
* Don't zoom in/out if plus/minus pressed whilst editing OCR
* Allow cut/copy/paste whilst editing OCR
* Fixed bug manually adding OCR that overlaps with existing words
* + button to duplicate OCR text
* Fixed bug adding OCR text '0'
* Fixed bug processing deleted page
* Update to Hungarian translation (thanks to csola)


2.10.0 (31.10.2020):

* Switch from PDF::API2 to PDF::Builder to improve TIFF handling and compression
  options.
  Closes Debian bugs 602486 (heavily distored scans) and
  703768 (parts of the page translated to the right, black border)
* Switch from internal image viewer to Gtk3::ImageView
  (based on internal image viewer)
* Update to German translation (thanks to Eugen Artus)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.9.1 (25.09.2020):

* Work around imagemagick versions that create TIFFs that PDF::API2 doesn't like
  when testing pdftk by using JPEG.
  Closes #361 Hang on startup since commit #ab767c
* Read locale from LC_MESSAGES, rather than LANGUAGE environmental variable, map
  C locale to English. Thanks to Petr Písař and Chris Mayo for the patches.
  Closes bug #360 and merge request #32.
* Update to Hungarian translation (thanks to csola)
* Update to German translation (thanks to Matthias Sprau)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.9.0 (19.09.2020):

* + warning if tesseract OCR package for current locale not installed.
* + split tool
* If device-not-found mini-wizard is exited via cancel or by destroying it,
  use ignore response.
* Fix bug manually adding first OCR word to page.
* Limit zoom to 15 to avoid errors like:
  "pango_font_description_set_size: assertion 'size >= 0' failed"
* Fix bug finding page by number
* Update to Hungarian translation (thanks to csola)
* Update to Turkish translation (thanks to Buckethead)


2.8.2 (25.07.2020):
